--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install tfenv
         run: |
           git clone https://github.com/tfutils/tfenv.git ~/.tfenv
-          ln -s ~/.tfenv/bin/* /usr/local/bin
+          ln -ns ~/.tfenv/bin/* /usr/local/bin
 
       - name: Install correct version
         run: |
