--- a/files/code-server.service
+++ b/files/code-server.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Code Server Service
 StartLimitIntervalSec=0
+After=network.target
 
 [Service]
 Type=simple
@@ -10,4 +11,4 @@ User=ubuntu
 ExecStart=/usr/bin/code-server
 
 [Install]
-WantedBy=nginx
+WantedBy=default.target
